Adicionando acções nos botoes

--- a/src/app/components/card-music/card-music.component.html
+++ b/src/app/components/card-music/card-music.component.html
@@ -2,6 +2,6 @@
   <span>{{ id }}</span>
   <span>{{ author }}</span>
   <span>{{ music }}</span>
-  <button>editar</button>
+  <button (click)="editMusic()">editar</button>
   <button (click)="removeMusic()">remover</button>
 </div>
