--- a/src/app/components/main-card/main-card.component.html
+++ b/src/app/components/main-card/main-card.component.html
@@ -14,7 +14,7 @@
     </div>
     <button class="btn-criar" (click)="onCreateMusic()">Criar +</button>
   </div>
-  <div class="card-content">
+  <div class="card-list-content">
     <h3>Minha Lista de Musicas....</h3>
     <div>
       @for (item of musicList$ | async; track $index) {
