--- a/src/app/components/main-card/main-card.component.scss
+++ b/src/app/components/main-card/main-card.component.scss
@@ -29,9 +29,11 @@
   cursor: pointer;
 }
 
-.card-content {
+.card-list-content {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+
   h3 {
     text-align: center;
     font-weight: 300;
