Adicionando novos estilos + requsição de update

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .main-container {
   width: 100vw;
   height: 100vh;
-  background-color: white;
+  background-color: #f1f1f1;
   display: flex;
   justify-content: center;
   align-items: center;
