--- a/src/app/components/card-music/card-music.component.scss
+++ b/src/app/components/card-music/card-music.component.scss
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 8px;
   margin-bottom: 8px;
-  background-color: #e1e1e1;
+  background-color: #e5e5ff;
   border-radius: 8px;
   width: fit-content;
 }
