--- a/src/app/components/card-music/card-music.component.scss
+++ b/src/app/components/card-music/card-music.component.scss
@@ -2,30 +2,53 @@
   display: flex;
   gap: 1rem;
   align-items: center;
-  padding: 8px;
   margin-bottom: 8px;
   background-color: #e5e5ff;
   border-radius: 8px;
-  width: fit-content;
+  width: 100%;
+  max-width: 450px;
+}
+
+.wrapper-id {
+  font-weight: bold;
+  color: gray;
+  background-color: #bfbff8;
+  padding: 4px;
+  border-radius: 50px;
 }
 
 .info-music-container {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  padding: 8px;
+  gap: 4px;
 }
 
 .btn-wrapper {
+  margin-left: 12px;
+  display: flex;
+  gap: 4px;
   button {
     background-color: transparent;
-    border: 1px solid transparent;
-    border-radius: 4px;
+    border: none;
     padding: 8px 4px;
     cursor: pointer;
   }
   .edit {
-    background-color: #2e8b57;
+    color: #2e8b57;
+
+    &:hover {
+      background-color: #ddf1e6;
+      border-radius: 8px;
+    }
   }
   .remove {
-    background-color: #dc143c;
+    color: #dc143c;
+    &:hover {
+      background-color: #e7acb8;
+      border-radius: 8px;
+    }
   }
 }
